use upstream ml_types again

--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -38,14 +38,6 @@ source:
   - url: https://github.com/tensorflow/estimator/archive/refs/tags/v{{ estimator_version.replace(".rc", "-rc") }}.tar.gz
     sha256: 2d7e100b1878084da34b5e23b49a0cbb5ee8a7add74b7dd189a82ada1cf85530
     folder: tensorflow-estimator
-  # yes, the headers come from a different version than the python package required below.
-  # TODO: Check that these are still up to date
-  - url: https://raw.githubusercontent.com/jax-ml/ml_dtypes/v0.3.1/ml_dtypes/include/float8.h
-    fn: float8.h
-    sha256: d2798fad4e64375b566b1df1d7bc440313e4b1024ca08f12cead3eaa4b73ff72
-  - url: https://raw.githubusercontent.com/jax-ml/ml_dtypes/v0.3.1/ml_dtypes/include/int4.h
-    fn: int4.h
-    sha256: b3a9970c3c6b169c41ac2fd4375f668d3fd1b492d48b912d89415fa1522a8f50
 
 build:
   number: 0
@@ -144,7 +136,7 @@ requirements:
     - gast >=0.2.1,!=0.5.0,!=0.5.1,!=0.5.2
     - google-pasta >=0.1.1
     - h5py >=2.9.0
-    - ml_dtypes 0.2.0
+    - ml_dtypes >=0.3.1,<0.4
     - numpy
     - opt_einsum >=2.3.2
     - protobuf >=3.20.3,<5,!=4.21.0,!=4.21.1,!=4.21.2,!=4.21.3,!=4.21.4,!=4.21.5
