update the other mentions of wrapt/keras/ml_types as well

--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -226,7 +226,7 @@ outputs:
         - gast >=0.2.1,!=0.5.0,!=0.5.1,!=0.5.2
         - google-pasta >=0.1.1
         - h5py >=2.9.0
-        - ml_dtypes 0.2.0
+        - ml_dtypes >=0.3.1,<0.4
         - numpy
         - opt_einsum >=2.3.2
         - protobuf >=3.20.3,<5,!=4.21.0,!=4.21.1,!=4.21.2,!=4.21.3,!=4.21.4,!=4.21.5
@@ -234,10 +234,10 @@ outputs:
         - six >=1.12
         - termcolor >=1.1.0
         - typing_extensions >=3.6.6
-        - wrapt >=1.11.0,<1.15
+        - wrapt >=1.11.0
         # TF-API needs to move in sync
         - tensorboard >=2.15,<2.16
-        - keras >=2.15,<2.16
+        - keras >=3.0
       run:
         - python
         - packaging
@@ -247,7 +247,7 @@ outputs:
         - google-pasta >=0.1.1
         - grpcio {{ libgrpc }}.*
         - h5py >=2.9.0
-        - ml_dtypes 0.2.0
+        - ml_dtypes >=0.3.1,<0.4
         - {{ pin_compatible('numpy', lower_bound='1.22') }}
         - opt_einsum >=2.3.2
         - protobuf >=3.20.3,<5,!=4.21.0,!=4.21.1,!=4.21.2,!=4.21.3,!=4.21.4,!=4.21.5
@@ -255,10 +255,10 @@ outputs:
         - six >=1.12
         - termcolor >=1.1.0
         - typing_extensions >=3.6.6
-        - wrapt >=1.11.0,<1.15
+        - wrapt >=1.11.0
         # TF-API needs to move in sync
         - tensorboard >=2.15,<2.16
-        - keras >=2.15,<2.16
+        - keras >=3.0
         # avoid that people without GPUs needlessly download ~0.5-1GB
         - __cuda                                                  # [cuda_compiler_version != "None"]
         # https://github.com/conda-forge/tensorflow-feedstock/issues/296#issuecomment-1835781851
