--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -33,6 +33,7 @@ source:
       - patches/0021-Link-to-absl_log_flags-instead-of-absl_flags.patch
       - patches/0022-Update-ABSL-Log-Definition-for-libabsl_vlog_config_i.patch
       - patches/0023-Update-flatbuffers-static-assert.patch
+      - patches/0024-add-absl_string_view-target.patch
   - url: https://github.com/tensorflow/estimator/archive/refs/tags/v{{ estimator_version.replace(".rc", "-rc") }}.tar.gz
     sha256: 2d7e100b1878084da34b5e23b49a0cbb5ee8a7add74b7dd189a82ada1cf85530
     folder: tensorflow-estimator
