--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -38,6 +38,7 @@ source:
       - patches/0026-add-absl_prefetch-target.patch
       - patches/0027-add-absl_die_if_null-target.patch
       - patches/0028-add-absl_crc32c-targets.patch
+      - patches/0029-avoid-ambiguity-in-conversion-to-absl-StatusOr-T.patch
   - url: https://github.com/tensorflow/estimator/archive/refs/tags/v{{ estimator_version.replace(".rc", "-rc") }}.tar.gz
     sha256: 2d7e100b1878084da34b5e23b49a0cbb5ee8a7add74b7dd189a82ada1cf85530
     folder: tensorflow-estimator
