--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -39,6 +39,7 @@ source:
       - patches/0027-add-absl_die_if_null-target.patch
       - patches/0028-add-absl_crc32c-targets.patch
       - patches/0029-avoid-ambiguity-in-conversion-to-absl-StatusOr-T.patch
+      - patches/0030-add-kernel_timeout_internal-target.patch
   - url: https://github.com/tensorflow/estimator/archive/refs/tags/v{{ estimator_version.replace(".rc", "-rc") }}.tar.gz
     sha256: 2d7e100b1878084da34b5e23b49a0cbb5ee8a7add74b7dd189a82ada1cf85530
     folder: tensorflow-estimator
