--- a/.ci_support/linux_64_c_compiler_version12c_stdlib_version2.12cuda_compilerNonecuda_compiler_versionNonecxx_compiler_version12python3.9.____cpython.yaml
+++ b/.ci_support/linux_64_c_compiler_version12c_stdlib_version2.12cuda_compilerNonecuda_compiler_versionNonecxx_compiler_version12python3.9.____cpython.yaml
@@ -1,23 +1,29 @@
-MACOSX_DEPLOYMENT_TARGET:
-- '10.13'
 c_compiler:
-- clang
+- gcc
 c_compiler_version:
-- '16'
+- '12'
 c_stdlib:
-- macosx_deployment_target
+- sysroot
 c_stdlib_version:
-- '10.13'
+- '2.12'
+cdt_name:
+- cos6
 channel_sources:
 - conda-forge
 channel_targets:
 - conda-forge main
+cuda_compiler:
+- None
 cuda_compiler_version:
 - None
+cudnn:
+- '8'
 cxx_compiler:
-- clangxx
+- gxx
 cxx_compiler_version:
-- '16'
+- '12'
+docker_image:
+- quay.io/condaforge/linux-anvil-cos7-x86_64
 flatbuffers:
 - 24.3.25
 giflib:
@@ -38,31 +44,38 @@ libpng:
 - '1.6'
 libprotobuf:
 - 4.25.3
-macos_machine:
-- x86_64-apple-darwin13.4.0
+nccl:
+- '2'
 numpy:
-- '1.23'
+- '1.22'
 openssl:
 - '3'
+perl:
+- 5.32.1
 pin_run_as_build:
   python:
     min_pin: x.x
     max_pin: x.x
 python:
-- 3.11.* *_cpython
+- 3.9.* *_cpython
 python_impl:
 - cpython
 snappy:
-- '1.1'
+- '1.2'
 sqlite:
 - '3'
 target_platform:
-- osx-64
+- linux-64
 tensorflow:
 - '2.15'
 zip_keys:
 - - c_compiler_version
   - cxx_compiler_version
+  - c_stdlib_version
+  - cdt_name
+  - cuda_compiler
+  - cuda_compiler_version
+  - docker_image
 - - python
   - numpy
   - python_impl
