--- a/recipe/conda_build_config.yaml
+++ b/recipe/conda_build_config.yaml
@@ -1,2 +1,6 @@
+c_compiler_version:     # [osx]
+  - 18                  # [osx]
+cxx_compiler_version:   # [osx]
+  - 18                  # [osx]
 github_actions_labels:
 - cirun-openstack-cpu-xlarge
