--- a/.ci_support/osx_64_python3.9.____cpython.yaml
+++ b/.ci_support/osx_64_python3.9.____cpython.yaml
@@ -1,5 +1,7 @@
 MACOSX_DEPLOYMENT_TARGET:
 - '10.13'
+MACOSX_SDK_VERSION:
+- '10.13'
 c_compiler:
 - clang
 c_compiler_version:
@@ -59,7 +61,7 @@ sqlite:
 target_platform:
 - osx-64
 tensorflow:
-- '2.15'
+- '2.16'
 zip_keys:
 - - c_compiler_version
   - cxx_compiler_version
@@ -67,4 +69,4 @@ zip_keys:
   - numpy
   - python_impl
 zlib:
-- '1.2'
+- '1'
