--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -1,6 +1,11 @@
-{% set version = "2.16.2" %}
+{% set version = "2.17.0.rc1" %}
 {% set estimator_version = "2.15.0" %}
-{% set ml_dtypes_version = "0.3.1" %}
+
+# 2.17.0.rc1 uses unreleased commit
+# https://github.com/jax-ml/ml_dtypes/commit/24084d9ed2c3d45bf83b7a9bff833aa185bf9172
+# see
+# https://github.com/tensorflow/tensorflow/blob/v2.17.0-rc1/third_party/py/ml_dtypes/workspace.bzl
+{% set ml_dtypes_version = "0.4.0" %}
 
 package:
   name: tensorflow-split
@@ -8,7 +13,7 @@ package:
 
 source:
   - url: https://github.com/tensorflow/tensorflow/archive/refs/tags/v{{ version.replace(".rc", "-rc") }}.tar.gz
-    sha256: 023849bf253080cb1e4f09386f5eb900492da2288274086ed6cfecd6d99da9eb
+    sha256: 0fc0e2575e2406359066a063b7d8a913ffcf77ba29c53822e66094c90c4446dd
     patches:
       - patches/0001-loosen-requirements.patch
       - patches/0002-Add-additional-absl_synchronization-linkage-to-gRPC.patch
@@ -215,18 +220,18 @@ outputs:
         - gast >=0.2.1,!=0.5.0,!=0.5.1,!=0.5.2
         - google-pasta >=0.1.1
         - h5py >=3.10
-        - ml_dtypes >={{ ml_dtypes_version }},<0.4
+        - ml_dtypes >={{ ml_dtypes_version }},<0.5
         - numpy
         - opt_einsum >=2.3.2
         - protobuf >=3.20.3,<5,!=4.21.0,!=4.21.1,!=4.21.2,!=4.21.3,!=4.21.4,!=4.21.5
-        - python-flatbuffers >=23.5.26
+        - python-flatbuffers >=24.3.25
         - requests >=2.21.0,<3
         - six >=1.12
         - termcolor >=1.1.0
         - typing_extensions >=3.6.6
         - wrapt >=1.11.0
         # TF-API needs to move in sync
-        - tensorboard >=2.16,<2.17
+        - tensorboard >=2.17,<2.18
         - keras >=3.0
       run:
         - python
@@ -237,18 +242,18 @@ outputs:
         - google-pasta >=0.1.1
         - grpcio {{ libgrpc }}.*
         - h5py >=3.10
-        - ml_dtypes >={{ ml_dtypes_version }},<0.4
+        - ml_dtypes >={{ ml_dtypes_version }},<0.5
         - {{ pin_compatible('numpy', lower_bound='1.22') }}
         - opt_einsum >=2.3.2
         - protobuf >=3.20.3,<5,!=4.21.0,!=4.21.1,!=4.21.2,!=4.21.3,!=4.21.4,!=4.21.5
-        - python-flatbuffers >=23.5.26
+        - python-flatbuffers >=24.3.25
         - requests >=2.21.0,<3
         - six >=1.12
         - termcolor >=1.1.0
         - typing_extensions >=3.6.6
         - wrapt >=1.11.0
         # TF-API needs to move in sync
-        - tensorboard >=2.16,<2.17
+        - tensorboard >=2.17,<2.18
         - keras >=3.0
         # avoid that people without GPUs needlessly download ~0.5-1GB
         - __cuda                                                  # [cuda_compiler_version != "None"]
