Hardcode BUILD_PREFIX in build_pip_package

--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -40,6 +40,7 @@ source:
       - patches/0028-add-absl_crc32c-targets.patch
       - patches/0030-add-kernel_timeout_internal-target.patch
       - patches/0031-work-around-for-warning-that-clang-falsely-treats-as.patch
+      - patches/0001-Hardcode-BUILD_PREFIX-in-build_pip_package.patch
   - url: https://github.com/tensorflow/estimator/archive/refs/tags/v{{ estimator_version.replace(".rc", "-rc") }}.tar.gz
     sha256: 2d7e100b1878084da34b5e23b49a0cbb5ee8a7add74b7dd189a82ada1cf85530
     folder: tensorflow-estimator
