--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -13,8 +13,8 @@ package:
 
 source:
   # - url: https://github.com/tensorflow/tensorflow/archive/refs/tags/v{{ version.replace(".rc", "-rc") }}.tar.gz
-  - url: https://github.com/tensorflow/tensorflow/archive/9f995aa79672b2d09eb70bae6b5f56c6f130e743.tar.gz
-    sha256: 596bd5218f3389259e7dc054e980f0f81013161c502aa1699b0ecafc7205d689
+  - url: https://github.com/tensorflow/tensorflow/archive/9a5b9f2dcba4c1c6380c7ce1d74f9fa8f4999d2e.tar.gz
+    sha256: 36244b7eaf6c1c5335588ecb4cf71ce40c1a859d917b1db7f1c1ed188fc7940e
     patches:
       - patches/0001-loosen-requirements.patch
       - patches/0002-Add-additional-absl_synchronization-linkage-to-gRPC.patch
@@ -41,7 +41,7 @@ source:
       - patches/0023-add-absl_crc32c-targets.patch
       - patches/0024-add-kernel_timeout_internal-target.patch
       - patches/0025-work-around-for-warning-that-clang-falsely-treats-as.patch
-      - patches/0026-Patch-ml_dtype-to-make-constructor-unambiguous.patch
+      # - patches/0026-Patch-ml_dtype-to-make-constructor-unambiguous.patch
       - patches/0027-Update-flatbuffers-static-assert.patch
       - patches/0028-Hardcode-BUILD_PREFIX-in-build_pip_package.patch
   - url: https://github.com/tensorflow/estimator/archive/refs/tags/v{{ estimator_version.replace(".rc", "-rc") }}.tar.gz
