Use build numbers to help prioritize GPU builds

--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -1,5 +1,10 @@
 {% set version = "2.17.0" %}
 {% set estimator_version = "2.15.0" %}
+{% set build = 1 %}
+
+{% if cuda_compiler_version != "None" %}
+{% set build = build + 200 %}
+{% endif %}
 
 # 2.17.0.rc1 uses unreleased commit
 # https://github.com/jax-ml/ml_dtypes/commit/24084d9ed2c3d45bf83b7a9bff833aa185bf9172
@@ -47,7 +52,7 @@ source:
     folder: tensorflow-estimator
 
 build:
-  number: 0
+  number: {{ build }}
   skip: true  # [win]
   skip: true  # [python_impl == 'pypy']
   skip: true  # [py<39]
