--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -248,7 +248,7 @@ outputs:
         - h5py >=3.10
         - ml_dtypes >={{ ml_dtypes_version }},<0.5
         - opt_einsum >=2.3.2
-        - protobuf >=3.20.3,<6,!=4.21.0,!=4.21.1,!=4.21.2,!=4.21.3,!=4.21.4,!=4.21.5
+        - protobuf >=5.26,<6
         - python-flatbuffers >=24.3.25
         - requests >=2.21.0,<3
         - six >=1.12
