--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -1,4 +1,4 @@
-{% set version = "2.17.0" %}
+{% set version = "2.18.0.rc1" %}
 {% set estimator_version = "2.15.0" %}
 {% set build = 3 %}
 
@@ -18,7 +18,7 @@ package:
 
 source:
   - url: https://github.com/tensorflow/tensorflow/archive/refs/tags/v{{ version.replace(".rc", "-rc") }}.tar.gz
-    sha256: 9cc4d5773b8ee910079baaecb4086d0c28939f024dd74b33fc5e64779b6533dc
+    sha256: d55566f26fec119f50cbb993713b95cd658e3dbcec721454c597c3ca60e9d41e
     patches:
       - patches/0001-loosen-requirements.patch
       - patches/0002-Add-additional-absl_synchronization-linkage-to-gRPC.patch
@@ -222,7 +222,7 @@ outputs:
         - astunparse >=1.6.0
         - gast >=0.2.1,!=0.5.0,!=0.5.1,!=0.5.2
         - google-pasta >=0.1.1
-        - h5py >=3.10
+        - h5py >=3.11
         - ml_dtypes >={{ ml_dtypes_version }},<0.5
         - numpy
         - opt_einsum >=2.3.2
@@ -235,7 +235,7 @@ outputs:
         - typing_extensions >=3.6.6
         - wrapt >=1.11.0
         # TF-API needs to move in sync
-        - tensorboard >=2.17,<2.18
+        - tensorboard >=2.18,<2.19
         - keras >=3.0
       run:
         - python
@@ -245,7 +245,7 @@ outputs:
         - gast >=0.2.1,!=0.5.0,!=0.5.1,!=0.5.2
         - google-pasta >=0.1.1
         - grpcio {{ libgrpc }}.*
-        - h5py >=3.10
+        - h5py >=3.11
         - ml_dtypes >={{ ml_dtypes_version }},<0.5
         - opt_einsum >=2.3.2
         - protobuf >=5.26,<6
@@ -256,7 +256,7 @@ outputs:
         - typing_extensions >=3.6.6
         - wrapt >=1.11.0
         # TF-API needs to move in sync
-        - tensorboard >=2.17,<2.18
+        - tensorboard >=2.18,<2.19
         - keras >=3.0
         # avoid that people without GPUs needlessly download ~0.5-1GB
         - __cuda                                                  # [cuda_compiler_version != "None"]
